主要丰富了CH0_数学公式章节的内容

--- a/CH0_数学公式.ipynb
+++ b/CH0_数学公式.ipynb
@@ -264,7 +264,12 @@
     "所以有 $\\frac{d\\sigma}{dx}\\rightarrow 0 \\; (|x|\\rightarrow \\infty)$\n",
     "\n",
     "\n",
-    "6. 如图所示以及上述第四点关于导数在正负无穷远处为零的性质可知，**sigmoid 函数在变量趋于正负无穷时(实际操作中就是指取值的绝对值比较大时)会出现饱和(saturate)现象，意味着函数会变得很平，并且对输入的微小改变不敏感。**"
+    "6. 如图所示以及上述第四点关于导数在正负无穷远处为零的性质可知：\n",
+    "\n",
+    "    * **sigmoid 函数在变量趋于正负无穷时(实际操作中就是指取值的绝对值比较大时)会出现饱和(saturate)现象(导数等于0)，意味着函数会变得很平，并且对输入的微小改变不敏感。**\n",
+    "    \n",
+    "    \n",
+    "    * **函数在接近 0 点附近导数值比较大，也就是对数值的变动比较敏感，而远离 0 点时会饱和性越来越强(导数越来趋向于0)，所以更适合做输出单元，当然要配合抑制饱和的代价函数来使用，并不太适合做隐藏单元的激活函数。**"
    ]
   },
   {
@@ -355,6 +360,89 @@
    "metadata": {},
    "source": [
     "可以很明显看出， Softmax 函数是 sigmoid 函数的扩展，相应地，可以视为定义了 Multinoulli 分布。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "softmax 函数的数值方法稳定的版本\n",
+    "\n",
+    "$$softmax(\\mathbf{z})_i = \\frac{e^{z_i}}{\\sum_{j=1}^n e^{z_j}}$$ \n",
+    "\n",
+    "其中\n",
+    "\n",
+    "$$\\mathbf{z} = \\mathbf{x} - \\max_k x_k$$\n",
+    "\n",
+    "上述的运算是广播机制,这种线性平移映射不会影响或者改变 $softmax(\\mathbf{x})$ 的输出值。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**关于饱和性质**：\n",
+    "\n",
+    "首先我们变换下数值稳定版本的表达式：\n",
+    "\n",
+    "$$\\begin{split}\n",
+    "softmax(\\mathbf{z})_i &= \\frac{e^{z_i}}{\\sum_{j=1}^n e^{z_i}}\\\\\n",
+    "\\\\\n",
+    "&= \\frac{exp(x_i-\\max_k x_k)}{\\sum_{j=1}^n exp(x_j-\\max_k x_k)}\\\\\n",
+    "\\\\\n",
+    "&=\\frac{exp(x_i-\\max_k x_k)}{1+\\sum_{j\\neq k} exp(x_j-\\max_k x_k)}\n",
+    "\\end{split}$$ \n",
+    "\n",
+    "由上式我们可知\n",
+    "\n",
+    "* 当 $x_i = \\max_k x_k \\; \\& \\; x_i\\gg x_j \\; (i\\neq j)$ 时, $softmax(\\mathbf{z})_i\\rightarrow 1$;\n",
+    "* 当 $x_i \\neq \\max_k x_k \\; \\& \\; x_i\\ll \\max_k x_k$ 时, $softmax(\\mathbf{z})_i\\rightarrow 0$。\n",
+    "\n",
+    "这种饱和性质属于上面我们介绍的 sigmoid 函数饱和性质的一般化体现。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## tanh 函数"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "双曲正切函数定义为双曲正弦与双曲余弦的比值，如下：\n",
+    "\n",
+    "$$\\tanh(x) = \\frac{\\sinh(x)}{\\cosh(x)}=\\frac{e^x - e^{-x}}{e^x + e^{-x}}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "图像如下：\n",
+    "\n",
+    "\n",
+    "<img src='figure/tanh.png' width='400' height='300' align='left'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "双曲正切函数的性质如下：\n",
+    "\n",
+    "1. $\\tanh(x)$ 是奇函数，即 $\\tanh(x)=\\tanh(-x)$;\n",
+    "\n",
+    "\n",
+    "2. 双曲正切函数可以看做是符号函数 sign(x) 的平滑形式；\n",
+    "\n",
+    "\n",
+    "3. $\\tanh(x)$ 函数在正负无穷远处的极限为 $+1,-1$；在零点附近近似于 $y=x$;\n",
+    "\n",
+    "\n",
+    "4. $\\tanh(x)=2\\sigma(2x)-1$;"
    ]
   },
   {
@@ -673,18 +761,34 @@
    "source": [
     "一个必须对上溢和下溢进行稳定的例子是 **softmax 函数**：\n",
     "\n",
-    "$$softmax(\\mathbf{x})_i = \\frac{\\exp{(x_i)}}{\\sum_{j=1}^n \\exp{(x_i)}}$$"
+    "$$softmax(\\mathbf{x})_i = \\frac{e^{x_i}}{\\sum_{j=1}^n e^{x_i}}$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "当所有的 $x_i$ 取值为 c 时，理论上每个输出都应该是 $\\frac{1}{c}$，但是当 c 量级很大时就会发生上溢。如果 c 是很小的负数时， $\\exp{(c)}$ 会发生下溢。softmax 函数的分母会变成 0 。这两个困难可以通过定义 **$$softmax(\\mathbf{z})$$** 来实现：\n",
+    "当所有的 $x_i$ 取值为 c 时，理论上每个输出都应该是 $\\frac{1}{c}$，由\n",
+    "$$\\begin{split}\n",
+    "& \\lim_{c\\rightarrow +\\infty}e^c = +\\infty\\\\\n",
+    "& \\lim_{c\\rightarrow -\\infty}e^c = 0\\\\\n",
+    "\\end{split}$$\n",
+    "\n",
+    "可知，当 c 量级很大时会发生上溢；c 是很小的负数时会发生下溢。softmax 函数的分母会变成 0 。这两个数值计算上不稳定的问题可以通过定义 \n",
+    "\n",
+    "$$softmax(\\mathbf{z})_i = \\frac{e^{z_i}}{\\sum_{j=1}^n e^{z_j}}$$ \n",
+    "\n",
+    "其中\n",
     "\n",
     "$$\\mathbf{z} = \\mathbf{x} - \\max_i x_i$$\n",
     "\n",
-    "并且这种线性平移映射不会影响或者改变 $softmax(\\mathbf{x})$ 的输出值。"
+    "上述的运算是广播机制,这种线性平移映射不会影响或者改变 $softmax(\\mathbf{x})$ 的输出值。\n",
+    "\n",
+    "减去 $\\max_i x_i$ 使得 \n",
+    "\n",
+    "$$e^{z_i} \\leq 1$$\n",
+    "\n",
+    "所以不会发生上溢，同时分母中至少有一个值为 1 的项，不会使得分母为 0 从而发生数值下溢。"
    ]
   },
   {
