--- a/CH4_逻辑回归.ipynb
+++ b/CH4_逻辑回归.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "对于单调可微的函数 g ，我们定义了关于线性函数 f 的“广义线性模型”如下：\n",
     "\n",
-    "$$g(y) = f(x) \\tag{linear}$$\n",
+    "$$g(y) = f(\\mathbf{x}) \\tag{linear}$$\n",
     "\n",
     "我们称 g 为“联系函数”，如果 f 的形式是 $f(\\mathbf{x}) = \\mathbf{w}^T\\mathbf{x} + b $，则\n",
     "\n",
@@ -35,7 +35,7 @@
    "source": [
     "## 对数线性回归\n",
     "\n",
-    "当式 (linear) 中的 g 为 $\\ln(x)$ 时，称 $y = e^{(\\mathbf{w}^T\\mathbf{x} + b)}$为对数线性回归。"
+    "当式 (linear) 中的 g 为 $\\ln(y)$ 时，称 $y = e^{(\\mathbf{w}^T\\mathbf{x} + b)}$为对数线性回归。"
    ]
   },
   {
@@ -86,7 +86,7 @@
    "source": [
     "从概率角度看对数几率回归(取值范围为(0,1)，所以可以看成概率)，可以写成\n",
     "\n",
-    "$$P(y=1|x,\\theta) = g^{-1}\\circ f(x,\\theta) = \\frac{1}{1 + e^{-\\theta ^T x}}$$\n",
+    "$$P(y=1|\\mathbf{x},\\mathbf{\\theta}) = g^{-1}\\circ f(\\mathbf{x},\\mathbf{\\theta}) = \\frac{1}{1 + e^{-\\mathbf{\\theta}^T \\mathbf{x}}}$$\n",
     "\n",
     "更详细的介绍请查看[“Logistic sigmoid 函数”章节。](https://github.com/BofengChen/ml_notes/blob/master/CH0_%E6%95%B0%E5%AD%A6%E5%85%AC%E5%BC%8F.ipynb)"
    ]
@@ -115,7 +115,7 @@
    "source": [
     "最终的分类器LR由 “单位阶跃函数”h、“对数几率函数”（sigmoid函数）$g^{-1}$、线性函数 f 符合而成。记\n",
     "\n",
-    "$$ LR(x) = h\\circ g^{-1}\\circ f$$\n",
+    "$$ LR(\\mathbf{x}) = h\\circ g^{-1}\\circ f$$\n",
     "\n",
     "_**注：真正的LR(x)是不包含最后一个复合函数 h 的，否则无法进行求导。我这里加上是为了便于解释。**_\n",
     "\n",
@@ -136,7 +136,7 @@
    "source": [
     "由上图可知：\n",
     "\n",
-    "$$LR(x):\\{(x_i, y_i)\\}_{i=1}^m \\stackrel{f} {\\longrightarrow} \\{R^-, R^+\\} \\stackrel{g^{-1}} {\\longrightarrow} \\left\\{\n",
+    "$$LR(\\mathbf{x}):\\{(\\mathbf{x}_i, y_i)\\}_{i=1}^m \\stackrel{f} {\\longrightarrow} \\{R^-, R^+\\} \\stackrel{g^{-1}} {\\longrightarrow} \\left\\{\n",
     "\\begin{aligned}\n",
     "R^- & \\mapsto (0, 0.5) \\\\\n",
     "R^+ & \\mapsto (0.5, 1)\n",
@@ -161,21 +161,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "二分类问题对应的对数似然函数为\n",
-    "\n",
-    "$$\\ell(\\theta) = \\sum_{i=1}^{m} y_i \\ln P(x_i;\\theta) + \\sum_{i=1}^{m} (1-y_i) \\ln (1-P(x_i;\\theta))$$"
+    "### 推导方式1"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "将 LR 模型中 $P(x_i;\\theta)=\\frac{1}{1 + exp({-\\theta ^T x})}$ 带入对数似然函数可以得到\n",
+    "二分类问题对应的对数似然函数为\n",
+    "\n",
+    "$$\\ell(\\mathbf{\\theta}) = \\sum_{i=1}^{m} y_i \\ln P(\\mathbf{x}_i;\\mathbf{\\theta}) + \\sum_{i=1}^{m} (1-y_i) \\ln (1-P(\\mathbf{x}_i;\\mathbf{\\theta}))$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "将 LR 模型中 $P(\\mathbf{x};\\mathbf{\\theta})=\\frac{1}{1 + exp({-\\mathbf{\\theta}^T \\mathbf{x}})}$ 带入对数似然函数可以得到\n",
     "\n",
     "$$\\begin{split}\n",
-    "\\ell(\\theta) = &\\sum_{i=1}^{m} y_i\\ln P(x_i;\\theta) + \\sum_{i=1}^{m} (1-y_i) \\ln (1-P(x_i;\\theta))\\\\\n",
-    "=& \\sum_{i=1}^{m}\\ln (1-P(x_i;\\theta)) + \\sum_{i=1}^{m} y_i\\ln\\frac{P(x_i;\\theta)}{(1-P(x_i;\\theta))}\\\\\n",
-    "=& -\\sum_{i=1}^{m}\\ln (1 + e^{\\theta ^T x_i}) + \\sum_{i=1}^{m} y_i\\theta^T x_i\n",
+    "\\ell(\\mathbf{\\theta}) = &\\sum_{i=1}^{m} y_i\\ln P(\\mathbf{x}_i;\\mathbf{\\theta}) + \\sum_{i=1}^{m} (1-y_i) \\ln (1-P(\\mathbf{x}_i;\\mathbf{\\theta}))\\\\\n",
+    "=& \\sum_{i=1}^{m}\\ln (1-P(\\mathbf{x}_i;\\mathbf{\\theta})) + \\sum_{i=1}^{m} y_i\\ln\\frac{P(\\mathbf{x}_i;\\mathbf{\\theta})}{(1-P(\\mathbf{x}_i;\\mathbf{\\theta}))}\\\\\n",
+    "=& -\\sum_{i=1}^{m}\\ln (1 + e^{\\mathbf{\\theta}^T \\mathbf{x}_i}) + \\sum_{i=1}^{m} y_i\\mathbf{\\theta}^T \\mathbf{x}_i\n",
     "\\end{split}$$"
    ]
   },
@@ -185,7 +192,7 @@
    "source": [
     "我们定义**LR 问题的成本函数**如下：\n",
     "\n",
-    "$$J(\\theta) = - \\frac{1}{m}\\ell(\\theta)$$\n",
+    "$$J(\\mathbf{\\theta}) = - \\frac{1}{m}\\ell(\\mathbf{\\theta})$$\n",
     "\n",
     "上式是一个凸函数，所以可以采用梯度下降法等凸优化方法求解极值。"
    ]
@@ -205,11 +212,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "记 $h_{\\theta}=g^{-1}\\circ f$，求解 $\\frac{\\partial\\ell(\\theta)}{\\partial \\theta_j}$ 得到\n",
+    "记 $h_{\\mathbf{\\theta}}=g^{-1}\\circ f$，求解 $\\frac{\\partial\\ell(\\mathbf{\\theta})}{\\partial \\theta_j}$ 得到\n",
     "\n",
-    "$$\\begin{split}\\frac{\\partial \\ell}{\\partial \\theta_j}=& -\\sum_{i=1}^m \\frac{e^{\\theta^T x_i}}{1 + e^{\\theta ^T x_i}} x_{ij} + \\sum_{i=1}^m y_i x_{ij}\\\\\n",
-    "=& -\\sum_{i=1}^{m} \\frac{1}{1 + e^{-\\theta ^T x_i}}x_{ij}+ \\sum_{i=1}^{m} y_i x_{ij}\\\\\n",
-    "=& \\sum_{i=1}^{m}(y_i - h_{\\theta}(x_i))x_{ij}\n",
+    "$$\\begin{split}\\frac{\\partial \\ell}{\\partial \\theta_j}=& -\\sum_{i=1}^m \\frac{e^{\\theta^T \\mathbf{x}_i}}{1 + e^{\\mathbf{\\theta} ^T \\mathbf{x}_i}} x_{ij} + \\sum_{i=1}^m y_i x_{ij}\\\\\n",
+    "=& -\\sum_{i=1}^{m} \\frac{1}{1 + e^{-\\mathbf{\\theta} ^T \\mathbf{x}_i}}x_{ij}+ \\sum_{i=1}^{m} y_i x_{ij}\\\\\n",
+    "=& \\sum_{i=1}^{m}(y_i - h_{\\mathbf{\\theta}}(\\mathbf{x}_i))x_{ij}\n",
     "\\end{split}$$"
    ]
   },
@@ -228,6 +235,59 @@
    "metadata": {},
    "source": [
     "以上就是对数几率回归的梯度下降法迭代公式，和线性回归的公式一致。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 推导方式2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "首先，我们有\n",
+    "\n",
+    "$$ h_{\\mathbf{\\theta}}(\\mathbf{x}_i))=P(\\mathbf{x}_i;\\mathbf{\\theta})=\\frac{1}{1 + exp({-\\mathbf{\\theta}^T \\mathbf{x}})} = \\sigma(z),\\quad z(\\mathbf{x},\\mathbf{\\theta})=\\mathbf{\\theta}^T \\mathbf{x}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "于是有\n",
+    "\n",
+    "$$\\begin{split}\n",
+    "\\ell(\\mathbf{\\theta}) &= \\sum_{i=1}^{m}\\ln P(\\mathbf{x}_i;\\mathbf{\\theta})^{y_i}(1-P(\\mathbf{x}_i;\\mathbf{\\theta}))^{(1-y_i)}\\\\\n",
+    "&=\\sum_{i=1}^{m}\\ln \\sigma(z_i)^{y_i}(1-\\sigma(z_i))^{(1-y_i)}\\\\\n",
+    "&=\\sum_{i=1}^{m}\\ln\\sigma[(2y_i-1)z_i]\n",
+    "\\end{split}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "求解 $\\frac{\\partial\\ell(\\mathbf{\\theta})}{\\partial \\theta_j}$ 得到\n",
+    "\n",
+    "$$\\begin{split}\\frac{\\partial \\ell}{\\partial \\theta_j}&= \\sum_{i=1}^m \\frac{\\partial \\ln\\sigma[(2y_i-1)z_i]}{\\partial \\theta_j}\\\\\n",
+    "&=\\sum_{i=1}^m \\frac{\\partial \\ln\\sigma[(2y_i-1)z_i]}{\\partial z_i} \\frac{\\partial z_i}{\\partial \\theta_j}\\\\\n",
+    "&=\\sum_{i=1}^m \\frac{1}{\\sigma}\\frac{\\partial \\sigma}{\\partial z_i}x_{ij}\\\\\n",
+    "&=\\sum_{i=1}^m \\frac{1}{\\sigma}\\sigma(1-\\sigma)(2y_i-1)x_{ij}\\\\\n",
+    "&=\\sum_{i=1}^m (1-\\sigma[(2y_i-1)z_i])(2y_i-1)x_{ij}\\\\\n",
+    "&=\\sum_{i=1}^m \\sigma[(1-2y_i)z_i](2y_i-1)x_{ij}\\\\\n",
+    "&=\\sum_{i=1}^{m}(y_i -\\sigma(z_i))x_{ij}\\\\\n",
+    "&= \\sum_{i=1}^{m}(y_i - h_{\\mathbf{\\theta}}(\\mathbf{x}_i))x_{ij}\\\\\n",
+    "\\end{split}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "剩余的部分与上述的**“推导方式1”**一致。"
    ]
   },
   {
