主要丰富了CH0_数学公式章节的内容

--- a/CH12_特征选择与稀疏学习.ipynb
+++ b/CH12_特征选择与稀疏学习.ipynb
@@ -407,7 +407,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**L1 正则化与 L2 正则化都有助于降低过拟合风险，但相比于 L2 平均地减小各个参数的值，L1 更容易获得“稀疏”解，即它求得的 $\\mathbf{w}$ 会有更少的非零向量。**"
+    "**L1 正则化与 L2 正则化都有助于降低过拟合风险，但相比于 L2 缩减各个参数的值，L1 更容易获得“稀疏”解，即它求得的 $\\mathbf{w}$ 会有更少的非零向量。**"
    ]
   },
   {
