主要更新了《CH01_最优化理论》章节，其他章节有稍微的增添

--- a/CH02_最优化理论.ipynb
+++ b/CH02_最优化理论.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 最优化理论\n",
+    "**最优化理论**\n",
     "\n",
     "很多机器学习算法最后都归结为求解最优化问题。最优化问题一般都是求解极大值或者极小值，对于连续可微函数，在数学上有明确的[求解方法](https://blog.csdn.net/lanchunhui/article/details/51371444)。**实际问题中，函数本身可能过于复杂，比如包含指数函数、对数函数以及根号等，使得求解偏导数等于0的方程组不是那么容易，所以我们只能通过迭代的方法求近似解，称为数值计算。**\n",
     "\n",
@@ -22,14 +22,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 梯度下降法"
+    "# 梯度下降法"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 梯度下降法原理"
+    "## 梯度下降法原理"
    ]
   },
   {
@@ -103,17 +103,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 批量梯度下降算法（Batch Gradient Descent，简称BGD）\n",
+    "## 梯度下降法"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "对于函数 $f: R^n\\rightarrow R$，我们要最小化这个函数。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "在 $\\mathbf{u}$（单位向量）方向的方向导数是函数在 f 在 $\\mathbf{u}$ 方向的斜率，即 $f(\\mathbf{x}+\\alpha\\mathbf{u})$ 关于 $\\alpha$ 在 $\\alpha=0$ 时的导数，由链式法则可知 $\\alpha=0$ 时，\n",
     "\n",
-    "梯度下降法的原理可以看上面最优化理论的“梯度下降法原理”。\n",
+    "$$\\frac{\\partial}{\\partial\\alpha}f(\\mathbf{x}+\\alpha\\mathbf{u}) = \\mathbf{u}^T\\nabla_{\\mathbf{x}}f(\\mathbf{x})$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "为了最小化 f，我们希望找到使得 f 下降最快的方向。计算方向导数：\n",
     "\n",
-    "根据成本函数，梯度下降公式是：\n",
-    "\n",
-    "$$\\begin{split}\\theta_{j+1} = &\\theta_j - \\alpha_{j+1} \\frac{\\partial J(\\theta)}{\\partial \\theta}|_{\\theta = \\theta_j}\\\\\n",
-    "= &\\theta_j - \\frac{\\alpha_{j+1}}{m}\\sum_{i=1}^{m}(h(\\textbf{x}^{(i)})-y^{(i)})x_j^{(i)}\n",
+    "$$\\begin{split}\n",
+    "&\\min_{\\mathbf{u}^T\\mathbf{u}=1}\\mathbf{u}^T\\nabla_{\\mathbf{x}}f(\\mathbf{x})\\\\\n",
+    "=& \\min_{\\mathbf{u}^T\\mathbf{u}=1}||\\mathbf{u}||_2 ||f(\\mathbf{x})||_2\\cos{\\theta}\n",
     "\\end{split}$$\n",
     "\n",
-    "如果 每一步的学习率是一致不变的，可以记为 $\\alpha$."
+    "其中 $\\theta$ 是 $\\mathbf{u}$ 与梯度的夹角。将 $$||\\mathbf{u}||_2=1$$ 带入，忽略与 $\\mathbf{u}$ 无关的项，可以简化得到\n",
+    "\n",
+    "$$\\min_{\\mathbf{u}}\\cos{\\theta}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "在 $\\mathbf{u}$ 与梯度方向相反时取得最小。\n",
+    "\n",
+    "换句话说，梯度向量指向上坡，负梯度向量指向下坡。我们在负梯度方向移动可以减小 f。这就是 **梯度下降**。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "梯度下降建议新的点为：\n",
+    "\n",
+    "$$\\mathbf{x}^\\prime = \\mathbf{x} - \\epsilon \\nabla_{\\mathbf{x}}f(\\mathbf{x})$$\n",
+    "\n",
+    "其中 $\\epsilon$ 为 **学习率**，是一个确定步长大小的正标量。"
    ]
   },
   {
@@ -130,8 +172,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 随机梯度下降算法(Stochastic Gradient Descent，简称SGD)\n",
-    "上面的梯度下降法中每次循环更新参数需要遍历所有的训练数据集，我们可以改成每次随机从训练数据集里抽取一个数据进行迭代计算，这就是**随机梯度下降法**，公式如下：\n",
+    "## SGD 和 MBGD"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "### SGD\n",
+    "\n",
+    "\n",
+    "上面的梯度下降法中每次循环更新参数需要遍历所有的训练数据集，我们可以改成每次随机从训练数据集里抽取一个数据进行迭代计算，这就是**随机梯度下降法(Stochastic Gradient Descent，简称SGD)**，公式如下：\n",
     "\n",
     "$$\\theta_j = \\theta_j - \\alpha(h(\\textbf{x}^{(i)})-y^{(i)})x_j^{(i)}$$"
    ]
@@ -156,44 +208,444 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 小批量梯度下降法（Mini-batch Gradient Descent，简称MBGD）"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "MBGD 是 BGD 和 SGD 的折中，为了解决批梯度下降法训练速度慢，以及随机梯度下降法的准确性综合而来,每次迭代选用b个样本进行更新。公式如下：\n",
+    "***\n",
+    "### MBGD\n",
     "\n",
-    "$$\\theta_j = \\theta_j - \\frac{\\alpha}{b}\\sum_{k=i}^{i+b}(h(\\textbf{x}^{(i)})-y^{(i)})x_j^{(i)}, \\quad i = 1, 1+b, ...,m-b, m$$"
+    "小批量梯度下降法（Mini-batch Gradient Descent，简称MBGD）是 BGD 和 SGD 的折中，为了解决批梯度下降法训练速度慢，以及随机梯度下降法的准确性综合而来,每次迭代选用m个小批量样本进行更新。"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 牛顿求根法"
+    "下面的算法展示了 沿着这个梯度的估计下降。\n",
+    "***\n",
+    "**MBGD** 小批量随机梯度下降在第 k 个训练迭代的更新\n",
+    "***\n",
+    "**Require:** 学习率 $\\epsilon_k$ 和初始参数 $\\mathbf{\\theta}$\n",
+    "\n",
+    "**While** 停止准则未满足 **do**\n",
+    "* 从训练集中采样包含 m 个样本的小批量集合 $\\{\\mathbf{x}_1,\\mathbf{x}_2,\\cdots,\\mathbf{x}_m \\}$,其中 $\\mathbf{x}_i$ 对应的值为 $\\mathbf{y}_i$;\n",
+    "\n",
+    "\n",
+    "* 计算梯度估计： $\\hat{\\mathbf{g}}\\leftarrow +\\frac{1}{m}\\nabla_{\\mathbf{\\theta}}\\sum_i L(f(\\mathbf{x}_i;\\mathbf{\\theta}),\\mathbf{y}_i)$;\n",
+    "\n",
+    "\n",
+    "* 应用更新：$\\mathbf{\\theta}\\leftarrow \\mathbf{\\theta} - \\epsilon \\hat{\\mathbf{g}}$\n",
+    "\n",
+    "**end While**\n",
+    "***"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 共轭梯度法"
+    "SGD 及其变种算法的关键参数是**学习率**。之前我们介绍 SGD 使用固定的学习率，在实践中有必要随着时间点的推移逐渐降低学习率，因此我们记第 k 步迭代的学习率为 $\\epsilon_k$。原因如下：\n",
+    "\n",
+    "    当我们使用全批量梯度下降到达极小点时，整个代价函数的真实梯度会变得很小直到为0，所以全批量梯度下降可以使用固定的学习率。但是 MBGD 中梯度估计引入的噪声源(m 个训练样本的随即采样) 并不会在极小值点消失，所以学习率要逐渐降低。"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## [最大似然估计（maximum likelihood estimation，缩写为MLE）](https://zh.wikipedia.org/wiki/%E6%9C%80%E5%A4%A7%E4%BC%BC%E7%84%B6%E4%BC%B0%E8%AE%A1)"
+    "H.Herbert 和 S.Monro 在论文 [A Stochastic Approximation Method](https://projecteuclid.org/download/pdf_1/euclid.aoms/1177729586) 中给出了保证 SGD及其变种收敛的充分条件是：\n",
+    "\n",
+    "$$\\begin{split}\n",
+    "& \\sum_{k=1}^{\\infty}\\epsilon_k = \\infty\\\\\n",
+    "& \\sum_{k=1}^{\\infty}\\epsilon_k^2 = \\infty\n",
+    "\\end{split}$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 二分类问题对应的定义"
+    "实践中，一般会选出**线性衰减学习率** 直到第 $\\tau$ 次迭代：\n",
+    "\n",
+    "$$\\epsilon_k = (1-\\alpha)\\epsilon_0 + \\alpha\\epsilon_\\tau = \\epsilon_0 -\\alpha(\\epsilon_0 -\\epsilon_\\tau) $$\n",
+    "\n",
+    "其中 $\\alpha = \\frac{k}{\\tau}$。$\\tau$ 步迭代后，一般使 $\\epsilon$ 保持常数。\n",
+    "\n",
+    "备注：线性衰减不满足SGD收敛的充分条件？？"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**$\\epsilon_0$、$\\epsilon_\\tau$、$\\tau$ 的选择：**\n",
+    "\n",
+    "* $\\tau$ 通常被设为可以满足反复遍历训练集几百次的迭代次数，如果是SGD，则迭代次数是训练集规模与 $k*100$ 的乘积；\n",
+    "\n",
+    "\n",
+    "* $\\epsilon_\\tau$ 一般被设置为 $\\epsilon_0*1\\%$;\n",
+    "\n",
+    "\n",
+    "* 如果 $\\epsilon_0$ 过大，学习曲线将剧烈震荡，代价函数会明显增加；相比剧烈震荡而言，温和的震荡是良好的，容易在训练随机代价函数时出现，例如使用 Dropout 的代价函数；如果学习率太小，学习过程会很缓慢，并且容易卡在一个相当高的代价值。\n",
+    "\n",
+    "    如果初始学习率太低，学习会卡在一个相当高的代价值。就总训练时间和最终代价值而言，最优的初始学习率的效果会好于一般的学习率(??)大约迭代100次之后最佳的效果。所以通常最好是检测最早的几轮迭代，选择一个比在效果上表现最佳的学习率（？？）更大的学习率，但又不能太大导致严重的震荡，更像是一门艺术。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "**衡量收敛率**\n",
+    "\n",
+    "\n",
+    "优化算法的收敛速率通过衡量**额外误差 $J(\\mathbf{\\theta})-\\min_{\\mathbf{\\theta}}J(\\mathbf{\\theta})$**，即当前代价函数超出最低可能代价的数量。\n",
+    "\n",
+    "SGD 应用于凸问题时，k 步迭代之后的额外误差量级是 $O(\\frac{1}{\\sqrt{k}})$（考虑 m 个均值的标准差为 $\\frac{\\sigma}{\\sqrt{m}}$），强凸情形下是 $O(\\frac{1}{k})$。如果想要进一步改进，需要假定额外的前提条件。\n",
+    "\n",
+    "全批量梯度下降在理论上比随机梯度有更好的收敛率，但是 Cramer-Rao 界限指出，**泛化误差的下降速度不会快于 $O(\\frac{1}{\\sqrt{k}})$。** 另外，渐近分析没有考虑 SGD 在下降效率上的优点：**对于大数据集， SGD 只需要非常少量样本计算梯度从而实现初始快速更新，在时间上远远超过了其缓慢的渐近收敛。**\n",
+    "\n",
+    "为了权衡全批量梯度下降和 SGD 两者的优点，我们可以再学习过程中逐渐增大 “小批量” 的大小。想要了解更多 SGD，可以参看 [Online Learning and Stochastic\n",
+    "Approximations](https://leon.bottou.org/publications/pdf/online-1998.pdf)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 动量与 Nesterov 动量"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 动量"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "虽然 SGD 很受欢迎，但有时学习过程会很慢。**动量方法旨在加速学习，特别是处理高曲率、小但一致的梯度，或者是带噪声的梯度。动量算法积累了之前梯度指数级衰减的移动平均(??)，并且继续沿该方向移动。**如下图所示。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src='figure/momentum0.png'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "形式上看，动量算法引入了变量 $\\mathbf{v}$ 充当速度角色——代表参数在参数空间移动的方向和速率。速度被设为负梯度的指数衰减平均。超参数 $\\alpha\\in [0,1)$ 决定了之前梯度的贡献衰减得有多快。更新规则如下： \n",
+    "\n",
+    "$$\\begin{split}\n",
+    "& \\mathbf{g}\\leftarrow \\epsilon\\nabla_{\\mathbf{\\theta}}\\left(\\frac{1}{m}\\sum_{i=1}^{m}L(f(\\mathbf{x}_i;\\mathbf{\\theta}), \\mathbf{y}_i)\\right)\\\\\n",
+    "& \\mathbf{v}_k\\leftarrow a\\mathbf{v}_{k-1} - \\epsilon\\mathbf{g}\\\\\n",
+    "& \\mathbf{\\theta}_k\\leftarrow\\mathbf{\\theta}_{k-1}+\\mathbf{v}_k\n",
+    "\\end{split}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "其中速度的更新等价于\n",
+    "$$\\begin{split}\n",
+    "&\\mathbf{v}_k - \\frac{\\epsilon\\mathbf{g}}{\\alpha-1} = \\alpha(\\mathbf{v}_{k-1} - \\frac{\\epsilon\\mathbf{g}}{\\alpha-1})\\\\\n",
+    "& \\mathbf{v}_k = -\\left(\\frac{1-\\alpha^k}{1-\\alpha}\\epsilon\\mathbf{g} +\\alpha^k\\mathbf{v}_0\\right)\n",
+    "\\end{split}\\tag{Mom-1}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "由(Mom-1)的第二个式子可知，当 k 足够大时，因为$\\alpha\\in [0,1)$ 所以 \n",
+    "\n",
+    "$$\\mathbf{v}_k\\rightarrow -\\frac{1}{1-\\alpha}\\epsilon\\mathbf{g}  \\quad when \\;\\alpha^k\\rightarrow 0$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "进而参数的更新为\n",
+    "\n",
+    "$$\\mathbf{\\theta}_k\\leftarrow\\mathbf{\\theta}_{k-1}-\\frac{\\epsilon\\mathbf{g}}{1-\\alpha}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "相比之前的 SGD，速度更新的步长只是学习率乘以梯度范数 $\\mathbf{\\theta}_k\\leftarrow\\mathbf{\\theta}_{k-1}-\\epsilon\\mathbf{g}$,现在步长取决于梯度序列的大小和排列($\\{\\mathbf{g}_k\\}$)。\n",
+    "\n",
+    "上面的推导是基于连续的梯度指向相同的方向，此时步长最大。也就是说，如果动量算法总是观测到梯度 $\\mathbf{g}$,则会在 $-\\mathbf{g}$ 上不停加速，直到达到最终速度。其步长大小为\n",
+    "\n",
+    "$$\\frac{\\epsilon||\\mathbf{g}||}{1-\\alpha}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**动量的超参数 $\\alpha$ 选择**\n",
+    "\n",
+    "\n",
+    "因此，将动量的超参数视为 $\\frac{1}{1-\\alpha}$ 有助于理解。例如 $\\alpha=0.9$ 最大对应着梯度下降算法的10倍速度。实践中 $\\alpha$ 一般取值为 0.5、 0.9 和 0.99。和学习率一样，$\\alpha$ 也会随着时间不断调整。一般初始值是一个较小的值，随后慢慢变大。**随着时间推移调整 $\\alpha$ 没有收缩 $\\epsilon$ 重要（？？）。**\n",
+    "\n",
+    "注：实际迭代时每一步的梯度 $\\mathbf{g}_k$ 是不同的，所以步长中系数并不是简单的 $\\frac{\\epsilon}{1-\\alpha}$，这只是一种极端情况，也就是连续的梯度指向相同的方向。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "动量算法的算法伪代码图如下：\n",
+    "\n",
+    "***\n",
+    "**动量算法** 使用动量的随机梯度下降\n",
+    "***\n",
+    "**Require:** 学习率 $\\epsilon$，动量参数 $\\alpha$\n",
+    "\n",
+    "**Require:** 初始参数 $\\mathbf{\\theta}$，初始速度 $\\mathbf{v}$\n",
+    "\n",
+    "**While** 停止准则未满足 **do**\n",
+    "* 从训练集中采样包含 m 个样本的小批量集合 $\\{\\mathbf{x}_1,\\mathbf{x}_2,\\cdots,\\mathbf{x}_m \\}$,其中 $\\mathbf{x}_i$ 对应的值为 $\\mathbf{y}_i$;\n",
+    "\n",
+    "\n",
+    "* 计算梯度估计： $\\mathbf{g}\\leftarrow \\frac{1}{m}\\nabla_{\\mathbf{\\theta}}\\sum_i L(f(\\mathbf{x}_i;\\mathbf{\\theta}),\\mathbf{y}_i)$;\n",
+    "\n",
+    "\n",
+    "* 计算速度更新： $\\mathbf{v}_k\\leftarrow a\\mathbf{v}_{k-1} - \\epsilon\\mathbf{g}$\n",
+    "\n",
+    "\n",
+    "* 应用更新：$\\mathbf{\\theta}_k\\leftarrow \\mathbf{\\theta}_{k-1} + \\mathbf{v}_k$\n",
+    "\n",
+    "**end While**\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Nesterov 动量"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "受到 Nesterov 加速梯度算法的启发， Sutskever 提出了动量算法的一个变种，相应的更新规则如下：\n",
+    "\n",
+    "$$\\begin{split}\n",
+    "& \\mathbf{g}\\leftarrow \\epsilon\\nabla_{\\mathbf{\\theta}}\\left(\\frac{1}{m}\\sum_{i=1}^{m}L(f(\\mathbf{x}_i;\\mathbf{\\theta}+ a\\mathbf{v}), \\mathbf{y}_i)\\right)\\\\\n",
+    "& \\mathbf{v}_k\\leftarrow a\\mathbf{v}_{k-1} - \\epsilon\\mathbf{g}\\\\\n",
+    "& \\mathbf{\\theta}_k\\leftarrow\\mathbf{\\theta}_{k-1}+\\mathbf{v}_k\n",
+    "\\end{split}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "可以看出，两者的区别体现在梯度计算上。在 Nesterov 动量中，梯度计算在施加当前速度之后。因此，Nesterov 动量可以解释为往标准动量方法中添加了一个**校正因子**。完整的Nesterov 动量 如下所示。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "**Nesterov 动量算法** 使用Nesterov 动量的随机梯度下降\n",
+    "***\n",
+    "**Require:** 学习率 $\\epsilon$，动量参数 $\\alpha$\n",
+    "\n",
+    "**Require:** 初始参数 $\\mathbf{\\theta}$，初始速度 $\\mathbf{v}$\n",
+    "\n",
+    "**While** 停止准则未满足 **do**\n",
+    "\n",
+    "* 从训练集中采样包含 m 个样本的小批量集合 $\\{\\mathbf{x}_1,\\mathbf{x}_2,\\cdots,\\mathbf{x}_m \\}$,其中 $\\mathbf{x}_i$ 对应的值为 $\\mathbf{y}_i$;\n",
+    "\n",
+    "\n",
+    "* 应用临时更新： $\\mathbf{\\hat{\\theta}}\\leftarrow \\mathbf{\\theta}+ \\alpha\\mathbf{v}$;\n",
+    "\n",
+    "\n",
+    "* 计算梯度估计： $\\mathbf{g}\\leftarrow \\frac{1}{m}\\nabla_{\\mathbf{\\hat{\\theta}}}\\sum_i L(f(\\mathbf{x}_i;\\mathbf{\\hat{\\theta}}),\\mathbf{y}_i)$;\n",
+    "\n",
+    "\n",
+    "* 计算速度更新： $\\mathbf{v}_k\\leftarrow a\\mathbf{v}_{k-1} - \\epsilon\\mathbf{g}$\n",
+    "\n",
+    "\n",
+    "* 应用更新：$\\mathbf{\\theta}_k\\leftarrow \\mathbf{\\theta}_{k-1} + \\mathbf{v}_k$\n",
+    "\n",
+    "**end While**\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "在 凸批量梯度的情况下， Nesterov 动量将 额外误差收敛率从 $O(\\frac{1}{k})$ （k 步后）改进到 $O(\\frac{1}{k^2})$,但是在随机梯度的情况下， Nesterov 动量没有改进收敛率。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 牛顿法"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "牛顿法是最广泛使用的二阶方法，它是基于二阶泰勒级数展开在某点$\\mathbf{\\theta}_0$ 附近来近似 $J(\\mathbf{\\theta})$ 的优化方法。忽略高阶导数：\n",
+    "\n",
+    "$$J(\\mathbf{\\theta}) \\approx J(\\mathbf{\\theta}_0) + (\\mathbf{\\theta}-\\mathbf{\\theta}_0)^T\\nabla_{\\mathbf{\\theta}}J(\\mathbf{\\theta}_0)+\\frac{1}{2}(\\mathbf{\\theta}-\\mathbf{\\theta}_0)^T\\mathbf{H}(\\mathbf{\\theta}-\\mathbf{\\theta}_0)$$\n",
+    "\n",
+    "其中 $\\mathbf{H}$ 是 J 相对于 $\\mathbf{\\theta}$ 的 Hessian 矩阵在 $\\mathbf{\\theta}_0$ 处的估计。我们求解这个函数的临界点：\n",
+    "\n",
+    "$$\\frac{\\partial J(\\mathbf{\\theta})}{\\partial\\mathbf{\\theta}} = \\mathbf{0}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "得到\n",
+    "\n",
+    "$$\\mathbf{\\theta}^\\ast = \\mathbf{\\theta}_0-\\mathbf{H}^{-1}\\nabla_{\\mathbf{\\theta}}J(\\mathbf{\\theta}_0)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "因此，对于局部的二次函数(具有正定的)$\\mathbf{H}$，用 $\\mathbf{H}^{-1}$ 重新调整梯度，牛顿法直接跳到极小值。\n",
+    "\n",
+    "如果目标函数是凸的但是非二次的(有高阶项)，该更新是迭代的，得到和牛顿法相关的算法。算法如下所示。\n",
+    "\n",
+    "<img src='figure/newton0.png'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "在深度学习中，目标函数通常非凸，如鞍点。这种情况我们可以通过正则化 Hessian 矩阵来避免，常用的正则化策略包括在 Hessian 矩阵对角线上增加常数 $\\alpha$ 。加入正则化后解变为\n",
+    "\n",
+    "$$\\mathbf{\\theta}^\\ast = \\mathbf{\\theta}_0-[\\mathbf{H}+\\alpha\\mathbf{I}]^{-1}\\nabla_{\\mathbf{\\theta}}J(\\mathbf{\\theta}_0)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "这个正则化策略用于牛顿法的近似，只要 Hessian 矩阵的负特征值比较接近零，效果还是会很好。\n",
+    "\n",
+    "曲率方向极端的情况下， $\\alpha$ 的值必须足够大，以抵消负特征值。然而，如果 $\\alpha$ 持续增加， Hessian 矩阵会变成由 $\\alpha\\mathbf{I}$ 主导，通过牛顿法选择的方向会收敛到普通梯度的$\\frac{1}{\\alpha}$ 。 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "**牛顿法的计算负担**\n",
+    "\n",
+    "牛顿法用于训练大型神经网络还受限于明显的计算负担， Hessian 矩阵中元素数目是参数数量的平方。如果参数数目为 k，牛顿法要计算 $k\\times k$ 矩阵的逆，计算复杂度为 $O(K^3)$。\n",
+    "\n",
+    "另外，由于参数每次更新都会改变，每次训练迭代都要计算 Hessian 矩阵的逆。这就导致，只有参数很小的网络才能在实际中用牛顿法进行训练。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 共轭梯度法"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# BFGS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Broyden–Fletcher–Goldfarb–Shanno（BFGS）算法具有牛顿法的一些优点，但没有牛顿法的计算负担。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "我们回顾牛顿法，由下式给出\n",
+    "$$\\mathbf{\\theta}^\\ast = \\mathbf{\\theta}_0-\\mathbf{H}^{-1}\\nabla_{\\mathbf{\\theta}}J(\\mathbf{\\theta}_0)$$\n",
+    "\n",
+    "其中 $\\mathbf{H}$ 是 J 相对于 $\\mathbf{\\theta}$ 的 Hessian 矩阵在 $\\mathbf{\\theta}_0$ 处的估计。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "运用牛顿法的主要计算难点在于计算 Hessian 逆 $\\mathbf{H}^{-1}$。拟牛顿法所采用的方法(BFGS是其中最突出的)是使用矩阵 $\\mathbf{M}_t$ 近似逆，迭代更新以更好近似 $\\mathbf{H}^{-1}$。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "当 Hessian 逆近似 $\\mathbf{M}_t$ 更新时，下降方向 $\\mathbf{M}_t\\mathbf{g}_t$。参数更新为\n",
+    "\n",
+    "$$\\mathbf{\\theta}_{t+1} = \\mathbf{\\theta}_{t}+\\epsilon^\\ast\\mathbf{M}_t\\mathbf{g}_t$$\n",
+    "$\\epsilon^\\ast$ 是搜索步长。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "该方法和共轭梯度不同的是：\n",
+    "\n",
+    "* 该方法的成功并不严重依赖于线搜索寻找该方向上和真正极小值很近的一点；\n",
+    "\n",
+    "\n",
+    "* 相比于 共轭梯度，BFGS 的优点是其花费较少的时间改进每个线搜索；\n",
+    "\n",
+    "\n",
+    "* BFGS 算法必须存储 Hessian 逆矩阵 $\\mathbf{M}$,需要 $O(n^2)$ 的存储空间，使 BFGS 不适用于大多数具有百万级参数的现代深度学习模型。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "**存储受限的 BFGS(或L-BFGS)** 通过避免存储完整的 Hessian 逆矩阵 $\\mathbf{M}$， BFGS 算法的存储代价可以显著降低。L-BFGS 算法使用和 BFGS 算法相同的方法计算 $\\mathbf{M}$ 的近似，但是其实假设 $\\mathbf{M}^{(t-1)}$ 是单位矩阵，而不是一步一步存储近似。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# [最大似然估计（maximum likelihood estimation，缩写为MLE）](https://zh.wikipedia.org/wiki/%E6%9C%80%E5%A4%A7%E4%BC%BC%E7%84%B6%E4%BC%B0%E8%AE%A1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 二分类问题对应的定义"
    ]
   },
   {
@@ -224,7 +676,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 最大似然函数与最小化交叉熵的等价性"
+    "## 最大似然函数与最小化交叉熵的等价性"
    ]
   },
   {
@@ -289,7 +741,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## [Lagrange 对偶与KKT条件](https://wizardforcel.gitbooks.io/dm-algo-top10/content/svm-2.html)"
+    "# [Lagrange 对偶与KKT条件](https://wizardforcel.gitbooks.io/dm-algo-top10/content/svm-2.html)"
    ]
   },
   {
@@ -391,21 +843,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "name": "python3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
