--- a/CH11_聚类.ipynb
+++ b/CH11_聚类.ipynb
@@ -817,6 +817,184 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "论文伪代码的实现如下："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-05-05T11:39:13.860556Z",
+     "start_time": "2019-05-05T11:39:13.813554Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# -*- coding: utf-8 -*-\n",
+    "import bisect\n",
+    "\n",
+    "processed = True\n",
+    "unprocessed = False\n",
+    "NOISE = -1\n",
+    "\n",
+    "import math\n",
+    "x_pi = math.pi * 3000.0 / 180.0\n",
+    "AA = 6378245.0\n",
+    "EE = 0.00669342162296594323\n",
+    "r = 6371\n",
+    "\n",
+    "\n",
+    "\n",
+    "def distance_of_two_points(point_1, point_2):  \n",
+    "    '''\n",
+    "    计算两个经纬度点之间的距离\n",
+    "    type(point) = list\n",
+    "    point = [lat, lon]\n",
+    "\n",
+    "    '''\n",
+    "    x_pi = math.pi * 3000.0 / 180.0\n",
+    "    AA = 6378245.0\n",
+    "    EE = 0.00669342162296594323\n",
+    "    r = 6371\n",
+    "\n",
+    "    lat1, lon1, lat2, lon2 = map(math.radians, point_1+point_2)\n",
+    "\n",
+    "    diff_lon = lon2 - lon1\n",
+    "    diff_lat = lat2 - lat1\n",
+    "    a = math.sin(diff_lat / 2) ** 2 + math.cos(lat1) * math.cos(lat2) * math.sin(diff_lon / 2) ** 2\n",
+    "    c = 2 * math.asin(math.sqrt(a))\n",
+    "    return c * r * 1000\n",
+    "\n",
+    "\n",
+    "# cluster common part:give the neighbor\n",
+    "def neighbor(object_i, set_of_objects, eps, MinPts):\n",
+    "\n",
+    "    neighbor_points_dict = {}\n",
+    "    points_num = set_of_objects.shape[1]\n",
+    "\n",
+    "    a = set_of_objects[:, object_i]\n",
+    "    point_1 = [a[0], a[1]]\n",
+    "\n",
+    "    for i in range(points_num):\n",
+    "        if i != object_i:\n",
+    "            b = set_of_objects[:, i]\n",
+    "            point_2 = [b[0], b[1]]\n",
+    "            dist = distance_of_two_points(point_1, point_2)\n",
+    "            if dist < eps:\n",
+    "                neighbor_points_dict[i] = dist\n",
+    "\n",
+    "    dist_list = neighbor_points_dict.values()\n",
+    "    if len(dist_list) < MinPts:\n",
+    "        core_dist = 'undefined'\n",
+    "    else:\n",
+    "        core_dist = sorted(dist_list)[MinPts-1]\n",
+    "\n",
+    "    return neighbor_points_dict.keys(), core_dist\n",
+    "\n",
+    "\n",
+    "# ------------- OPTICS -------------------\n",
+    "def seeds_update(object_i, set_of_objects, neighbor_object_i, processed_list, r_dist, c_dist_i, order_seeds):\n",
+    "\n",
+    "    a = set_of_objects[:, object_i]\n",
+    "    point_1 = [a[0], a[1]]\n",
+    "\n",
+    "    for object_k in neighbor_object_i:\n",
+    "        if processed_list[object_k] == unprocessed:\n",
+    "\n",
+    "            b = set_of_objects[:, object_k]\n",
+    "            point_2 = [b[0], b[1]]\n",
+    "            new_r_dist = max(c_dist_i, distance_of_two_points(point_1, point_2))\n",
+    "\n",
+    "            if r_dist[object_k] == 'undefined':\n",
+    "                r_dist[object_k] = new_r_dist\n",
+    "                bisect.insort_right(order_seeds, (new_r_dist, object_k))\n",
+    "            else:  # object already in order_seeds\n",
+    "                if new_r_dist < r_dist[object_k]:\n",
+    "\n",
+    "                    old_index = bisect.bisect_left(order_seeds, (r_dist[object_k], object_k))\n",
+    "                    order_seeds.remove(order_seeds[old_index])\n",
+    "\n",
+    "                    r_dist[object_k] = new_r_dist\n",
+    "                    bisect.insort_right(order_seeds, (new_r_dist, object_k))\n",
+    "    return order_seeds\n",
+    "\n",
+    "\n",
+    "def expand_cluster_order(set_of_objects, object_i, eps, MinPts, ordered_list, c_dist, r_dist, processed_list, neighbor_dict):\n",
+    "\n",
+    "    order_seeds = []\n",
+    "    neighbor_dict[object_i], c_dist[object_i] = neighbor(object_i, set_of_objects, eps, MinPts)\n",
+    "    processed_list[object_i] = processed\n",
+    "    ordered_list.append(object_i)\n",
+    "\n",
+    "    if c_dist[object_i] != 'undefined':\n",
+    "\n",
+    "        order_seeds = seeds_update(object_i, set_of_objects, neighbor_dict[object_i], processed_list, r_dist, c_dist[object_i], order_seeds)\n",
+    "\n",
+    "        while len(order_seeds) != 0:\n",
+    "\n",
+    "            current_object = order_seeds[0][1]\n",
+    "            order_seeds.remove(order_seeds[0])\n",
+    "\n",
+    "            neighbor_dict[current_object], c_dist[current_object] = neighbor(current_object, set_of_objects, eps, MinPts)\n",
+    "            processed_list[current_object] = processed\n",
+    "            ordered_list.append(current_object)\n",
+    "\n",
+    "            if c_dist[current_object] != 'undefined':\n",
+    "\n",
+    "                order_seeds = seeds_update(current_object, set_of_objects, neighbor_dict[current_object], processed_list, r_dist, c_dist[current_object], order_seeds)\n",
+    "\n",
+    "    return ordered_list, c_dist, r_dist\n",
+    "\n",
+    "\n",
+    "def cluster_extracting(ordered_list, r_dist, c_dist, eps_small):\n",
+    "    size = len(ordered_list)\n",
+    "    cluster_mark = [NOISE] * size\n",
+    "    cluster_id = NOISE\n",
+    "    k = 0\n",
+    "    for i in xrange(size):\n",
+    "        object_cur = ordered_list[i]\n",
+    "\n",
+    "        if r_dist[object_cur] > eps_small or r_dist[object_cur] == 'undefined':\n",
+    "            if c_dist[object_cur] <= eps_small:\n",
+    "                k += 1\n",
+    "                cluster_id = k\n",
+    "                cluster_mark[object_cur] = cluster_id\n",
+    "            else:\n",
+    "                cluster_mark[object_cur] = NOISE\n",
+    "        else:\n",
+    "            cluster_mark[object_cur] = cluster_id\n",
+    "\n",
+    "    return cluster_mark\n",
+    "\n",
+    "\n",
+    "def optics_paper(set_of_objects, optics_para):\n",
+    "\n",
+    "    eps = optics_para[0]\n",
+    "    eps_small = optics_para[1]\n",
+    "    MinPts = optics_para[2]\n",
+    "\n",
+    "    size = set_of_objects.shape[1]\n",
+    "\n",
+    "    # initialize\n",
+    "    ordered_list = []\n",
+    "    processed_list = [unprocessed] * size\n",
+    "    r_dist = ['undefined'] * size\n",
+    "    c_dist = ['undefined'] * size\n",
+    "    neighbor_dict = {}\n",
+    "\n",
+    "    for object_i in xrange(size):\n",
+    "        if processed_list[object_i] == unprocessed:\n",
+    "\n",
+    "            ordered_list, c_dist, r_dist = expand_cluster_order(set_of_objects, object_i, eps, MinPts, ordered_list, c_dist, r_dist, processed_list, neighbor_dict)\n",
+    "\n",
+    "    return cluster_extracting(ordered_list, r_dist, c_dist, eps_small)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### DENCLUE"
    ]
   },
@@ -966,22 +1144,11 @@
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "name": "python3"
   },
   "toc": {
    "base_numbering": 1,
@@ -995,6 +1162,35 @@
    "toc_position": {},
    "toc_section_display": true,
    "toc_window_display": true
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
