--- a/CH14_降维之PCA.ipynb
+++ b/CH14_降维之PCA.ipynb
@@ -236,7 +236,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "于是，只需要对协方差矩阵 $\\mathbf{X}\\mathbf{X}^T$ 进行**特征值分解**（实践中常通过对 $\\mathbf{X}$ 奇异值分解来代替协方差矩阵的特征值分解），将求得的特征值排序：$\\lambda_1\\leq \\lambda_2\\leq\\cdots\\lambda_d$，再取前 $d_1$ 个特征值对应的特征向量构成的 $\\{\\mathbf{w}_1,\\mathbf{w}_2,...,\\mathbf{w}_{d_1}\\}$，再通过 $\\mathbf{Z} = \\mathbf{W}^T \\mathbf{X}$ 就可以得到降维后的样本集 $\\mathbf{Z}$，也就是 PCA 的解。"
+    "于是，只需要对协方差矩阵 $\\mathbf{X}\\mathbf{X}^T$ 进行**特征值分解**（实践中常通过对 $\\mathbf{X}$ 奇异值分解来代替协方差矩阵的特征值分解），将求得的特征值排序：$\\lambda_1\\geq \\lambda_2\\geq\\cdots\\geq\\lambda_d$，再取前 $d_1$ 个特征值对应的特征向量构成的 $\\{\\mathbf{w}_1,\\mathbf{w}_2,...,\\mathbf{w}_{d_1}\\}$，再通过 $\\mathbf{Z} = \\mathbf{W}^T \\mathbf{X}$ 就可以得到降维后的样本集 $\\mathbf{Z}$，也就是 PCA 的解。"
    ]
   },
   {
