--- a/CH00_数学公式.ipynb
+++ b/CH00_数学公式.ipynb
@@ -51,12 +51,160 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 线性相关和生成子空间"
+    "## 几何平均"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "一组正数$\\{a_1,a_2,\\cdots,a_n\\}$对应的[**几何平均(Geometric mean)**](https://zh.wikipedia.org/wiki/%E5%87%A0%E4%BD%95%E5%B9%B3%E5%9D%87%E6%95%B0)为\n",
+    "$$G(\\mathbf{a})=\\left(\\prod_{i=1}^n a_i\\right)^{\\frac{1}{n}}=\\sqrt[n]{a_1 a_2\\cdots a_n}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**几何平均与算术平均(arithmetic mean)的关系**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "假设 $\\mathbf{A}$ 所包含的样本与 $\\mathbf{B}$ 之间对应的关系是：\n",
+    "\n",
+    "$$\\mathbf{A} = f(\\mathbf{B})$$\n",
+    "其中 f 是广播函数，即满足\n",
+    "$$A_i = f(B_i) = \\ln B_i$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "则$\\mathbf{A}$ 的算术平均 $AM(\\mathbf{A})$ 与 $\\mathbf{B}$ 的几何平均 $GM(\\mathbf{B})$ 有如下关系：\n",
+    "\n",
+    "$$\\begin{split}\n",
+    "AM(\\mathbf{A}) &= \\frac{A_1 + A_2 +\\cdots+A_n}{n}\\\\\n",
+    "&= \\frac{\\ln A_1 + \\ln A_2 +\\cdots+\\ln A_n}{n}\\\\\n",
+    "&=\\ln\\sqrt[n]{B_1\\cdots B_n}\\\\\n",
+    "&=\\ln GM(\\mathbf{B})\n",
+    "\\end{split}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "通过上面的推导我们知道：**一组样本取对数所得到的算术平均 等于 这组样本几何平均 的对数。**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "几何平均的特点：\n",
+    "* 几何平均相比算术平均，可以不受样本中比较大的值的影响，能够反映所有分量共同作用的平均结果；\n",
+    "\n",
+    "* 如果一个结果是由不同环节组成的，每个环节代表一个分量，那么当衡量所有环节对最终结果的平均影响时，用集合平均更合适。比如一项投资5年内的平均增长率，就适合通过几何平均来衡量；\n",
+    "* 只有当所有分量相等时，几何平均与计算平均相等，其他情况都小于计算平均，如下图所示。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src='figure/GM.jpg'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hadamard 乘积"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "对于两个具有同样维数 $m\\times n$ 的矩阵 $\\mathbf{A}$ 和 $\\mathbf{B}$，我们定义它们的 [Hadamard](https://en.wikipedia.org/wiki/Hadamard_product_(matrices))乘积为\n",
+    "\n",
+    "$$(\\mathbf{A}\\odot\\mathbf{B})_{ij} = (\\mathbf{A})_{ij}(\\mathbf{B})_{ij}$$\n",
+    "\n",
+    "如果两个矩阵的维数不一致，无法定义 Hadamard 乘积。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "在 `python` 中 可以通过 `numpy` 中的 `*`或 `np.mutiply(,)` 来实现 Hadamard 乘积；`np.dot` 实现一般意义上的矩阵相乘。如果是两个矩阵的 Hadamard 乘积，维数必须一致；如果是 向量与 $m\\times n$ 矩阵的 Hadamard 乘积，要求向量的维数必须为 $m\\times 1$ 或者 $1\\times n$,通过广播机制扩展成 $m\\times n$ 与矩阵进行 Hadamard 乘积。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-19T06:47:12.199964Z",
+     "start_time": "2019-04-19T06:47:12.188963Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "Missing parentheses in call to 'print'. Did you mean print(i.shape,m.shape)? (<ipython-input-1-14ecf89122f4>, line 8)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-14ecf89122f4>\"\u001b[1;36m, line \u001b[1;32m8\u001b[0m\n\u001b[1;33m    print i.shape,m.shape\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m Missing parentheses in call to 'print'. Did you mean print(i.shape,m.shape)?\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "# hadamard 乘积\n",
+    "x = np.array([2,2,2])#对应 1*3 的向量\n",
+    "y = np.array([[2],[2]])#对应 3*1 的向量\n",
+    "z = np.ones((2,3))\n",
+    "m = np.ones((2,3))\n",
+    "for i in [x,y,z,m]:\n",
+    "    print i.shape,m.shape\n",
+    "    if i is not m:\n",
+    "        print i*m,'\\n',i*m == np.multiply(i,m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-19T06:47:12.202964Z",
+     "start_time": "2019-04-19T06:47:12.202Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# 矩阵乘积 \n",
+    "np.dot(np.ones((3,2)),m)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "## 线性相关和生成子空间"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "下面我们讨论如下方程\n",
     "\n",
@@ -67,7 +215,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "为了分析方程有多少个解，我们可以将 $\\mathbf{A}$ 的列向量看作从**原点**（元素都是零的向量）出发的不同方向，确定有多少种方法可以到达向量 $\\mathbf{b}$。在这个观点下，向量 $\\mathbf{x}$ 的每个元素表示我们应该沿着这些方向走多远，即$x_i$ 表示我们需要沿着第 i 个向量的方向走多远：\n",
     "\n",
@@ -78,14 +228,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "一组向量的**生成子空间**是原始向量线性组合之后所能抵达的点的集合。"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "***\n",
     "**存在解的充分必要条件**"
@@ -93,14 +247,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "确定 $\\mathbf{A}\\mathbf{x}=\\mathbf{b}$ 是否有解，相当于确定向量 $\\mathbf{b}$ 是否在 $\\mathbf{A}$ 列向量的生成子空间中。这个特殊的生成子空间被称为 $\\mathbf{A}$ 的 **列空间(column space)**或者 $\\mathbf{A}$ 的 **值域(range)**。"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "为了使方程 $\\mathbf{A}\\mathbf{x}=\\mathbf{b}$ 对任意向量 $\\mathbf{b}$ 都存在解，我们要求 $\\mathbf{A}$ 的列空间构成整个 $R^m$，这样才能确保任意的 $\\mathbf{b}$ 包含在 $\\mathbf{A}$ 的列空间里，也就是说任意的 $\\mathbf{b}$ 是可达的。由$\\mathbf{A}\\in R^{m\\times n}$ 可知， $\\mathbf{A}$的列空间构成整个 $R^m$的要求等价于说 $\\mathbf{A}$ 至少应该有 m 列，也就是说 $n \\geq m$。\n",
     "\n",
@@ -111,7 +269,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "***\n",
     "**唯一解的条件**"
@@ -119,7 +279,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "如果要保证对于每一个 $\\mathbf{b}$ 至多有一个解，我们需要确保矩阵至多有 m 个列向量。\n",
     "\n",
@@ -449,6 +611,91 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 均值的标准差"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "方差有如下性质：\n",
+    "\n",
+    "$$\\begin{split}\n",
+    "Var(x) \n",
+    "&= E\\left[(x-E(x))^2\\right]\\\\\n",
+    "&=E\\left[x^2-2xE(x) +E^2(x)\\right]\\\\\n",
+    "&= E(x^2) - 2E^2(x)+E^2(x)\\\\\n",
+    "&=E(x^2) - E^2(x)\n",
+    "\\end{split}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "所以：\n",
+    "\n",
+    "$$Var(ax) = E(a^2x^2) - E^2(ax) = a^2(E(x^2) - E^2(x)) = a^2 Var(x)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "数据集上随机抽取 m 个样本$\\{x_i|1\\leq i\\leq m\\}$，记这些样本在真实分布 $p_{data}$ 上的标准差为 $\\sigma$，记 m 个样本的均值为：\n",
+    "\n",
+    "$$\\hat{\\mu}_m = \\frac{1}{m}\\sum_{i=1}^m x_i$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "记这 m 个样本均值所对应的标准差如下：\n",
+    "\n",
+    "$$\\begin{split}SE(\\hat{\\mu}_m) \n",
+    "&= \\sqrt{Var\\left[\\frac{1}{m}\\sum_{i=1}^m x_i\\right]}\\\\\n",
+    "&= \\sqrt{\\frac{1}{m^2}\\sum_{i=1}^m Var(x_i)}\\\\\n",
+    "&= \\sqrt{\\frac{1}{m^2}\\sum_{i=1}^m \\sigma^2}\\\\\n",
+    "&=\\frac{\\sigma}{\\sqrt{m}}\n",
+    "\\end{split}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "即：\n",
+    "\n",
+    "$$SE(\\hat{\\mu}_m) = \\frac{\\sigma}{\\sqrt{m}}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "均值的标准差在机器学习实验中非常有用，通常用测试集样本的误差期望来估计泛化误差，而测试集中样本的数量决定了估计的精确度。\n",
+    "\n",
+    "中心极限定理告诉我们均值会接近于一个高斯分布，我们可以用标准差计算出真实期望落在选定区间的概率。比如以均值 $\\hat{\\mu}_m$ 为中心的 95% 置信区间为\n",
+    "\n",
+    "$$(\\hat{\\mu}_m - 1.96 SE(\\hat{\\mu}_m), \\hat{\\mu}_m + 1.96 SE(\\hat{\\mu}_m))$$\n",
+    "\n",
+    "以上区间是基于均值 $\\hat{\\mu}_m$ 和 方差 $SE(\\hat{\\mu}_m)$ 的高斯分布。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "机器学习实验中，我们通常说算法 A 比算法 B 好，是指：\n",
+    "\n",
+    "$$ 算法 A 的误差的 95\\% 置信区间的上界 < 算法 B 误差的 95\\% 置信区间的下界 $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 数值计算\n",
     "\n",
     "部分内容来自于冯果忱主编的《数值分析(上册)》"
@@ -539,9 +786,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "特别地，**当$\\mathbf{A}\\in R^{n\\times n}$ 为对称矩阵时，** $\\mathbf{A}^T\\mathbf{A} = \\mathbf{A}^2$,从而\n",
+    "特别地，**当$\\mathbf{A}\\in R^{n\\times n}$ 为对称矩阵时($\\mathbf{A}^T\\mathbf{A} = \\mathbf{A}^2$)**,记 $\\mathbf{A}^T\\mathbf{A}$ 的最大特征值为 $\\lambda_\\max$，$\\mathbf{A}$ 最大特征值为 $\\lambda_{A\\max}$,则有 \n",
     "\n",
-    "$$||\\mathbf{A}||_2 = \\rho(\\mathbf{A})$$"
+    "$$\\lambda_\\max = \\lambda_{A\\max}^2,\\quad \\rho(\\mathbf{A}^T\\mathbf{A}) = (\\rho(\\mathbf{A}))^2$$\n",
+    "\n",
+    "从而\n",
+    "\n",
+    "$$\\begin{split}\n",
+    "||\\mathbf{A}||_2 &= \\sqrt{\\rho(\\mathbf{A}^T\\mathbf{A})} =\\sqrt{\\lambda_\\max}\\\\\n",
+    "& =\\rho(\\mathbf{A}) = \\lambda_{A\\max}\n",
+    "\\end{split}$$"
    ]
   },
   {
@@ -595,7 +849,7 @@
     "\n",
     "$$Cond(\\mathbf{A}) = ||\\mathbf{A}||\\cdot||\\mathbf{A}^{-1}||$$\n",
     "\n",
-    "条件数的大小和所取的**范数**有关。"
+    "条件数的大小和所取的**范数**有关。当该数很大时，矩阵求逆对输入的误差特别敏感。"
    ]
   },
   {
@@ -889,21 +1143,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "name": "python3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
